@@ -127,6 +127,9 @@
 
 6.11 2011-11-12 Gregory Nutt <gnutt@nuttx.org>
 
-    (No major changes from 6.10)
+	(No major changes from 6.10)
 
 6.12 2011-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+	* apps/examples/buttons:  The button test can now be executed as an NSH
+	  built in command.
